--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,3 +19,15 @@ body {
 .navbar-inverse .navbar-nav > li > a {
   color: white;
 } 
+
+.crop {
+    width: 200px;
+    height: 150px;
+    overflow: hidden;
+}
+
+.crop img {
+    width: 400px;
+    height: 300px;
+    margin: -75px 0 0 -100px;
+}
