--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,14 +20,12 @@ body {
   color: white;
 } 
 
-.crop {
-    width: 200px;
-    height: 150px;
+.crop > img {
+    width: 400px;
+    height: 200px;
     overflow: hidden;
 }
 
-.crop img {
-    width: 400px;
-    height: 300px;
-    margin: -75px 0 0 -100px;
+.img {
+    position: relative;
 }
