Add hover effect to images

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,17 +18,19 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail crop">
-              <img src="http://i.imgur.com/qK42fUu.jpg">
+              <a href="#"><img class="image" src="http://i.imgur.com/qK42fUu.jpg"></a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail crop">
-              <img src="https://images.unsplash.com/photo-1435771112039-1e5b2bcad966">
+                <a href="#">
+                    <img class="image" src="https://images.unsplash.com/photo-1435771112039-1e5b2bcad966">
+                </a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
             <div class="thumbnail crop">
-              <img src="https://images.unsplash.com/photo-1442406964439-e46ab8eff7c4">
+              <a href="#"><img class="image" src="https://images.unsplash.com/photo-1442406964439-e46ab8eff7c4"></a>
             </div>
           </div>
           <div class="col-lg-4 col-sm-6">
