--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,12 +20,23 @@ body {
   color: white;
 } 
 
-.crop > img {
+.crop > a > img {
     width: 400px;
     height: 200px;
     overflow: hidden;
 }
 
-.img {
+.image {
     position: relative;
+    -webkit-transition: all .4s ease-in-out;
+	-moz-transition: all .4s ease-in-out;
+	-o-transition: all .4s ease-in-out;
+	-ms-transition: all .4s ease-in-out;
+}
+
+.transition {
+    -webkit-transform: scale(1.1); 
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
 }
