--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,8 +28,10 @@
         </div>
     </div>
 
-    <% include partials/scripts %>
+    <hr class="large" />
+    
     <% include partials/footer %>
+    <% include partials/scripts %>
 </body>
 </html>
 
