--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-    <% include partials/head %>
+    <% include ../partials/head %>
     
 <body>
-	<% include partials/navbar %>
+	<% include ../partials/navbar %>
 
     <div class="container">
         <div class="jumbotron">
@@ -27,11 +27,9 @@
             <% }); %>
         </div>
     </div>
-
-    <hr class="large" />
     
-    <% include partials/footer %>
-    <% include partials/scripts %>
+    <% include ../partials/footer %>
+    <% include ../partials/scripts %>
 </body>
 </html>
 
