--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,21 @@
-body { 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
     padding-top: 70px; 
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
 }
 
 hr {
@@ -7,6 +23,11 @@ hr {
     height: 1px;
     color: #333;
     background-color: #333; 
+}
+
+.form {
+    width: 30%; 
+    margin: 25px auto;
 }
 
 .jumbotron {
@@ -51,4 +72,25 @@ hr {
     -moz-transform: scale(1.1);
     -o-transform: scale(1.1);
     transform: scale(1.1);
+}
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
 }
