--- a/src/views/images/view.ejs
+++ b/src/views/images/view.ejs
@@ -13,10 +13,11 @@
                     <img class="img-responsive" src="<%= image.url %>">
                 </a>
                 <div class="caption-full">
-                    <h4><%= image.name %></h4>
-                    <p><%= image.description %></p>
-                    <p><em>Submitted By: Placeholder User</em></p>
+                    <h1><%= image.title %></h1>
+                    <h4><%= image.description %></h4>
+                    <p><em>Submitted By: <a href="#">Placeholder User</a></em></p>
                 </div>
+            </div>
             </div>
         </div>
     </div>
