--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -11,7 +11,7 @@
             <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> The Image Link Gallery </h1>
             <p>A bunch of links to beautiful images</p> 
             <p>
-                <a class="btn btn-primary btn-large" href="/images/new">Add a New Image To The Collection</a>
+                <a class="btn btn-primary btn-large" href="/image/new">Add a New Image To The Collection</a>
             </p>
         </div>
 
@@ -19,7 +19,7 @@
             <% images.forEach(function(image) { %>
               <div class="col-lg-4 col-sm-6">
                 <div class="thumbnail crop">
-                    <a href="<%= image.url %>">
+                    <a href="/image/view">
                         <img class="image" src="<%= image.url %>">
                     </a>
                 </div>
