--- a/src/views/image/view.ejs
+++ b/src/views/image/view.ejs
@@ -15,7 +15,7 @@
                 <div class="caption-full">
                     <h1><%= image.title %></h1>
                     <h4><%= image.description %></h4>
-                    <p><em>Submitted By: <a href="#">Placeholder User</a></em></p>
+                    <p><em>Submitted By: </em><a href="#">Placeholder User</a></p>
                 </div>
             </div>
             </div>
