Make forms more responsive

--- a/src/views/image/new.ejs
+++ b/src/views/image/new.ejs
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <h1 class="text-center">Add a New Image</h1>
-            <div class="form">
+            <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
                 <form action="/campgrounds" method="POST">
                     <div class="form-group">
                         <input class="form-control" type="text" name="name" placeholder="Image Name">
@@ -25,7 +25,7 @@
                         <button class="btn btn-lg btn-primary btn-block" type="submit">Add Image</button>
                     </div>
                 </form>
-                <a href="/campgrounds">Go Back</a>
+                <a href="/">Go Back</a>
             </div>
         </div>
     </div>
