--- a/src/views/account/signup.ejs
+++ b/src/views/account/signup.ejs
@@ -8,24 +8,22 @@
 
     <div class="container">
         <div class="row">
-            <h1 class="text-center">Add a New Image</h1>
-            <div class="form">
-                <form action="/campgrounds" method="POST">
+            <h1 class="text-center">Sign Up</h1>
+            <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2">
+                <form action="/account/signup" method="POST">
                     <div class="form-group">
-                        <input class="form-control" type="text" name="name" placeholder="Image Name">
+                        <input class="form-control" type="text" name="username" placeholder="Username">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="image" placeholder="Image URL">
+                      <input class="form-control" type="password" name="password" placeholder="Password">
                     </div>
                     <div class="form-group">
-                      <label for="description">Optinal Description:</label>
-                      <textarea class="form-control" rows="5" name="description" id="description"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-lg btn-primary btn-block" type="submit">Add Image</button>
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up Now</button>
                     </div>
                 </form>
-                <a href="/campgrounds">Go Back</a>
+                <hr>
+                <p><a href="/campgrounds" >Go Back</a></p>
+                <p>Already have an accout? <a href="/account/login">Login here!</a></p>
             </div>
         </div>
     </div>
