--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -15,8 +15,8 @@
                 <li><a href="/contact">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/signup">Sign Up</a></li>
-                <li><a href="/login">Login</a></li>
+                <li><a href="/account/signup">Sign Up</a></li>
+                <li><a href="/account/login">Login</a></li>
             </ul>
         </div>
     </div>
