Update input form and model to include public option

--- a/src/views/image/new.ejs
+++ b/src/views/image/new.ejs
@@ -19,7 +19,7 @@
                     </div>
                     <div class="form-group">
                       <label for="description">Optinal Description:</label>
-                      <textarea class="form-control" rows="5" name="description" id="description"></textarea>
+                      <textarea class="form-control" rows="5" name="description" id="description" placeholder="Describe your image here..."></textarea>
                     </div>
                     <div class="checkbox">
                         <label for="isPublic"><input type="checkbox" value="isPublic">Make publicly visible?</label>
