--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,12 +10,12 @@ body {
 }
 
 .footer {
-    position: absolute;
+	width:100%;
     bottom: 0;
-    width: 100%;
-    /* Set the fixed height of the footer here */
-    height: 60px;
-    background-color: #f5f5f5;
+	background:#333;
+	clear: both;
+ 	position: absolute;
+ 	z-index: 10;
 }
 
 hr {
@@ -54,7 +54,49 @@ hr {
     overflow: hidden;
 }
 
-.image {
+.project-details {
+	background:#f8f8f8;
+	display: block;
+	padding:10px;
+	font-family: Georgia;
+	font-style: italic;
+    color: #6f6f6f;
+	width: auto;
+    height: auto;
+    max-width: 100%;
+}
+.project-details a {
+	margin: 0px; 
+    color: #333333;
+	font-size: 12px; 
+	font-style: normal;
+	text-shadow:none;
+	display: block;
+	font-family: "Oswald", sans-serif; 
+	font-weight: normal;
+	text-transform:uppercase; 
+}
+
+.project-details a:hover {
+    color:#d8450b; 
+    text-decoration: none;
+}
+
+.project-info {
+    margin: 0px 0px 40px 0px;
+}
+
+.project-info li { 
+	list-style: none; 
+	border-bottom: 1px dashed #a9a9a9;;
+	padding: 10px; 
+}
+
+.project-info li h6 {
+    display: inline; margin-right: 5px;
+}
+
+.thumbnail {
     position: relative;
     -webkit-transition: all .4s ease-in-out;
     -moz-transition: all .4s ease-in-out;
