--- a/src/views/image/view.ejs
+++ b/src/views/image/view.ejs
@@ -8,17 +8,28 @@
 
     <div class="container">
         <div class="row">
-            <div class="thumbnail">
-                <a href="<%= image.url %>">
-                    <img class="img-responsive" src="<%= image.url %>">
-                </a>
-                <div class="caption-full">
-                    <h1><%= image.title %></h1>
-                    <h4><%= image.description %></h4>
-                    <p><em>Submitted By: </em><a href="#">Placeholder User</a></p>
+            <!-- Gallery Items
+            ================================================== --> 
+            <div class="col-md-12 gallery-single">
+
+                <div class="row">
+                    <div class="col-md-6 thumbnail">
+                        <img src="http://i.imgur.com/qK42fUu.jpg" class="align-left img-responsive" alt="image">
+                    </div>
+                    <div class="col-md-6">
+                        <h2>Custom Illustration</h2>
+                        <p class="lead">For an international ad campaign. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie. Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna. Nulla faucibus ligula eget ante varius ac euismod odio placerat. Nam sit amet felis non lorem faucibus rhoncus vitae id dui.</p>
+                        <ul class="project-info">
+                            <li><h6>Date:</h6> 09/12/15</li>
+                            <li><h6>Client:</h6> John Doe, Inc.</li>
+                        </ul>
+
+                        <a href="#" class="btn btn-default pull-left" type="button">User Profile</a>
+                        <a href="/" class="btn btn-primary pull-right"><i class="icon-arrow-left"></i>Back to Gallery</a>
+                    </div>
                 </div>
-            </div>
-            </div>
+            </div><!-- End gallery-single-->
         </div>
     </div>
     
