--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -8,7 +8,7 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> The Image Link Gallery </h1>
+            <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> The Image Gallery </h1>
             <p>A bunch of links to beautiful images</p> 
             <p>
                 <a class="btn btn-primary btn-large" href="/image/new">Add a New Image To The Collection</a>
