--- a/src/views/image/view.ejs
+++ b/src/views/image/view.ejs
@@ -20,7 +20,7 @@
                         <h2>Custom Illustration</h2>
                         <p class="lead">For an international ad campaign. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus</p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie. Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna. Nulla faucibus ligula eget ante varius ac euismod odio placerat. Nam sit amet felis non lorem faucibus rhoncus vitae id dui.</p>
-                        <ul class="project-info">
+                        <ul class="image-info">
                             <li><h6>Date:</h6> 09/12/15</li>
                             <li><h6>Client:</h6> John Doe, Inc.</li>
                         </ul>
