--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,7 +3,7 @@
         <hr class="large" />
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p class="copyright text-muted text-center">Copyright &copy; Glendon Cheney 2016</p>
+                <p class="copyright text-muted text-center">Copyright &copy; 2016 <a href="http://glendoncheney.com" class="website-link">Glendon Cheney</a></p>
             </div>
         </div>
     </div>
