--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -8,11 +8,9 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> The Image Gallery </h1>
+            <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> The Image Gallery</h1>
             <p>A bunch of links to beautiful images</p> 
-            <p>
-                <a class="btn btn-primary btn-large" href="/image/new">Add a New Image To The Collection</a>
-            </p>
+            <p><a class="btn btn-primary btn-large" href="/image/new">Add a New Image To The Collection</a></p>
         </div>
 
         <div class="row">
@@ -21,7 +19,7 @@
                   <div class="col-md-4 col-sm-6">
                     <div class="thumbnail crop">
                         <a href="/image/view"><img class="image" src="<%= image.url %>"></a>
-                        <span class="project-details"><a href="/image/view">Custom Illustration</a>For an international add campaign.</span>
+                        <span class="image-details"><a href="/image/view">Custom Illustration</a>For an international add campaign.</span>
                     </div>
                   </div>
                 <% } %>
