Pull homepage image data from db

--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -19,7 +19,7 @@
                   <div class="col-md-4 col-sm-6">
                     <div class="thumbnail crop">
                         <a href="/image/view"><img class="image" src="<%= image.url %>"></a>
-                        <span class="image-details"><a href="/image/view">Custom Illustration</a>For an international add campaign.</span>
+                        <span class="image-details"><a href="/image/view"><%= image.title %></a><%= image.lead %></span>
                     </div>
                   </div>
                 <% } %>
