--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -17,12 +17,23 @@
             <% images.forEach(function(image) { %>
                 <% if (image.isPublic === true) { %>
                   <div class="col-md-4 col-sm-6">
-                    <div class="thumbnail crop">
-                        <a href="/image/view"><img class="image" src="<%= image.url %>"></a>
+                    <div class="thumbnail">
+                        <div class="image-wrap">
+                            <a href="/image/view">
+                                <img class="image" src="<%= image.url %>">
+                            </a>
+                            <div class="image-overlay">
+                                <h3 class="overlay-content">
+                                    <i class="fa fa-comment" aria-hidden="true"></i> 27
+                                    &nbsp;
+                                    <i class="fa fa-heart" aria-hidden="true"></i> 12
+                                </h3>
+                            </div>
+                        </div>
                         <span class="image-details"><a href="/image/view"><%= image.title %></a><%= image.lead %></span>
                     </div>
                   </div>
-                <% } %>
+                <% } %> 
             <% }); %>
         </div>
     </div>
