Fix layout issue with homepage images

--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -30,7 +30,9 @@
                                 </div>
                             </a>
                         </div>
-                        <span class="image-details"><a href="/image/view"><%= image.title %></a><%= image.lead %></span>
+                        <div class="image-details">
+                            <a href="/image/view"><%= image.title %></a><%= image.lead %>
+                        </div>
                     </div>
                   </div>
                 <% } %> 
