--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -23,15 +23,15 @@
                                 <img src="<%= image.url %>">
                                 <div class="image-overlay">
                                     <h3 class="overlay-content">
-                                        <i class="fa fa-comment" aria-hidden="true"></i> 27
+                                        <i class="fa fa-comment" aria-hidden="true"></i> <%= image.comments.length %>
                                         &nbsp;
-                                        <i class="fa fa-heart" aria-hidden="true"></i> 12
+                                        <i class="fa fa-heart" aria-hidden="true"></i> <%= image.likes %>
                                     </h3>
                                 </div>
                             </a>
                         </div>
                         <div class="image-details">
-                            <a href="/image/view"><%= image.title %></a><%= image.lead %>
+                            <a href="/image/view"><%= image.title %></a><%= image.description %>
                         </div>
                     </div>
                   </div>
