--- a/src/views/image/view.ejs
+++ b/src/views/image/view.ejs
@@ -8,28 +8,25 @@
 
     <div class="container">
         <div class="row">
-            <!-- Gallery Items
-            ================================================== --> 
-            <div class="col-md-12 gallery-single">
-
-                <div class="row">
-                    <div class="col-md-6 thumbnail">
-                        <img src="http://i.imgur.com/qK42fUu.jpg" class="align-left img-responsive" alt="image">
-                    </div>
-                    <div class="col-md-6">
-                        <h2>Custom Illustration</h2>
-                        <p class="lead">For an international ad campaign. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis mattis lorem, quis gravida nunc iaculis ac. Proin tristique tellus in est vulputate luctus fermentum ipsum molestie. Vivamus tincidunt sem eu magna varius elementum. Maecenas felis tellus, fermentum vitae laoreet vitae, volutpat et urna. Nulla faucibus ligula eget ante varius ac euismod odio placerat. Nam sit amet felis non lorem faucibus rhoncus vitae id dui.</p>
-                        <ul class="image-info">
-                            <li><h6>Date:</h6> 09/12/15</li>
-                            <li><h6>Creator:</h6> John Doe</li>
-                        </ul>
-
-                        <a href="#" class="btn btn-default pull-left" type="button">User Profile</a>
-                        <a href="/" class="btn btn-primary pull-right"><i class="icon-arrow-left"></i>Back to Gallery</a>
-                    </div>
+            <div class="image-container">
+                <div class="col-md-6 thumbnail">
+                    <img src="http://i.imgur.com/qK42fUu.jpg" class="align-left img-responsive" alt="image">
                 </div>
-            </div><!-- End gallery-single-->
+                <div class="col-md-6">
+                    <div class="well clearfix">
+                        <h2>Custom Illustration</h2>
+                        <p class="lead">For an international ad campaign.</p>
+                        <h4>42 Likes</h4>
+                        <button class="btn btn-success pull-left"><i class="fa fa-star" aria-hidden="true"></i> Like This</button>
+                        <a href="#" class="username pull-right">Created By: <strong>Username</strong></a>
+                    </div>
+                    
+                    
+
+                    <a href="/" class="btn btn-primary btn-gallery pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i>
+ Back to Gallery</a>
+                </div>
+            </div>
         </div>
     </div>
     
