--- a/src/views/image/view.ejs
+++ b/src/views/image/view.ejs
@@ -21,7 +21,16 @@
                         <a href="#" class="username pull-right">Created By: <strong>Username</strong></a>
                     </div>
                     
-                    
+                    <div class="scrollable">
+                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                    </div>
 
                     <a href="/" class="btn btn-primary btn-gallery pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i>
  Back to Gallery</a>
