--- a/src/views/image/view.ejs
+++ b/src/views/image/view.ejs
@@ -20,16 +20,18 @@
                         <button class="btn btn-success pull-left"><i class="fa fa-star" aria-hidden="true"></i> Like This</button>
                         <a href="#" class="username pull-right">Created By: <strong>Username</strong></a>
                     </div>
-                    
-                    <div class="scrollable">
-                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
-                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
-                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
-                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
-                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
-                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
-                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
-                        <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                    <div class="">
+                        <h4 class="text-center">Discuss This Image</h4>
+                        <div class="scrollable comments-section">
+                            <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                            <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                            <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                            <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                            <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                            <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                            <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                            <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
+                        </div>
                     </div>
 
                     <a href="/" class="btn btn-primary btn-gallery pull-right"><i class="fa fa-arrow-left" aria-hidden="true"></i>
