--- a/public/css/main.css
+++ b/public/css/main.css
@@ -144,20 +144,20 @@ hr {
     color: #000000;
 }
 
-.scrollable {
-    margin: 2em;
+.comments-section {
+    margin-top: 1em;
+    margin-bottom: 2em;
 }
 
 @media (min-width:961px) { 
     
     .comments-section {
+        height: 300px;
+        padding: 1em;
         box-shadow: 0px -1px 1px rgba(34,34,34,0.6);
     }
     
     .scrollable {
-        height: 300px;
-        margin: 2em;
-        padding: 1em;
         overflow-y: auto;
     }
 }
