--- a/src/views/image/view.ejs
+++ b/src/views/image/view.ejs
@@ -20,8 +20,9 @@
                         <button class="btn btn-success pull-left"><i class="fa fa-star" aria-hidden="true"></i> Like This</button>
                         <a href="#" class="username pull-right">Created By: <strong>Username</strong></a>
                     </div>
-                    <div class="">
-                        <h4 class="text-center">Discuss This Image</h4>
+                    <div class="text-center">
+                        <h4>Discuss This Image</h4>
+                        <button class="btn btn-default" data-toggle="modal" data-target="#commentModal"><i class="fa fa-comment" aria-hidden="true"></i> Comment</button>
                         <div class="scrollable comments-section">
                             <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
                             <p><a href="#" class="username"><strong>Username</strong></a> blah blah blah blah blah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blahblah blah blah blah</p>
@@ -40,6 +41,41 @@
             </div>
         </div>
     </div>
+    
+    <!-- Comment Modal -->
+    <div class="modal fade" id="commentModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">
+                           <i class="fa fa-times" aria-hidden="true"></i>
+                           <span class="sr-only">Close</span>
+                    </button>
+                    <h4 class="modal-title" id="commentModalLabel">
+                        Comment on Custom Illustration
+                    </h4>
+                </div>
+
+                <!-- Comment Modal Body -->
+                <div class="modal-body">
+                    <form action="#" method="POST" id="signup-form" class="form-horizontal">
+                         <div class="form-group">
+                            <div class="col-sm-10">
+                                <textarea rows="5" class="form-control" name="text" placeholder="Comment..."></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10 text-center">
+                                <button type="submit" class="btn btn-default pull-right"><i class="fa fa-comment" aria-hidden="true"></i>  Add Comment</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Comment Modal End -->
     
     <% include ../partials/footer %>
     <% include ../partials/scripts %>
