Change ipiblic to unlisted

--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -15,7 +15,7 @@
 
         <div class="row">
             <% images.forEach(function(image) { %>
-                <% if (image.isPublic === true) { %>
+                <% if (!image.unlisted) { %>
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="thumbnail">
                             <div class="image-wrap">
