Update image hover over thumbnail

--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -17,7 +17,7 @@
             <% images.forEach(function(image) { %>
                 <% if (!image.unlisted) { %>
                     <div class="col-md-4 col-sm-6 col-xs-12">
-                        <div class="thumbnail">
+                        <div class="thumbnail img-hover">
                             <div class="image-wrap">
                                 <a href="/image/view">
                                     <img src="<%= image.url %>">
