--- a/src/views/image/view.ejs
+++ b/src/views/image/view.ejs
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="image-container">
                 <div class="col-md-6 thumbnail">
-                    <img src="http://i.imgur.com/qK42fUu.jpg" class="align-left img-responsive" alt="image">
+                    <a href="<%= image.url %>"><img src="<%= image.url %>" class="align-left img-responsive" alt="image"></a>
                 </div>
                 <div class="col-md-6">
                     <div class="well clearfix">
