--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -41,6 +41,12 @@
     </div>
     
     <% include ../partials/footer %>
+    
+    <% if (message) { %>
+        <script type="text/javascript">
+            alert(<%= message %>);
+        </script>
+    <% } %>
     <% include ../partials/scripts %>
 </body>
 </html>
