Add pageheader and title to controller

--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -8,8 +8,8 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> The Image Gallery</h1>
-            <p>A bunch of links to beautiful images</p> 
+            <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> <%= pageHeader.title %></h1>
+            <p><%= pageHeader.tagline %></p> 
             <p><a class="btn btn-primary btn-large" href="/image/new">Add a New Image To The Collection</a></p>
         </div>
 
