--- a/public/css/main.css
+++ b/public/css/main.css
@@ -138,6 +138,41 @@ hr {
     transform: scale(1.1);
 }
 
+/* Lightbox */
+
+#lightbox {
+    position: fixed; 
+    z-index: 1;
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+    background: rgba(0, 0, 0, 0.7);
+    text-align: center;
+}
+
+#lightbox h1 {
+    text-align: right; 
+    color: #fff; 
+    margin-right: 40px; 
+    margin-top: 80px;
+}
+
+#lightbox img {
+    box-shadow: 0 0 25px #111;
+    -webkit-box-shadow: 0 0 25px #111;
+    -moz-box-shadow :0 0 25px #111;
+    max-width: 940px;
+}
+
+.lightbox-close {
+    opacity: 0.6;
+}
+
+.lightbox-close:hover {
+    opacity: 1.0;
+}
+
 /* Misc */
 
 .username {
