Change route from singular to plural

--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -19,7 +19,7 @@
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="thumbnail img-hover">
                             <div class="image-wrap">
-                                <a href="/image/<%= image._id %>">
+                                <a href="/images/<%= image._id %>">
                                     <img src="<%= image.url %>">
                                     <div class="image-overlay">
                                         <h3 class="overlay-content">
