--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,3 +1,19 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html>
+
+    <% include partials/head %>
+    
+<body>
+	<% include partials/navbar %>
+
+    <div class="text-center">
+        <h1><%= error.status %></h1>
+        <h2><%= message %></h2>
+        <% if (error.stack !== '') { %>
+            <pre><%= error.stack %></pre>
+        <% } %>
+    </div>
+    
+    <% include partials/footer %>
+</body>
+</html>
