--- a/src/views/image/details.ejs
+++ b/src/views/image/details.ejs
@@ -5,7 +5,6 @@
     
 <body>
 	<% include ../partials/navbar %>
-
     <div class="container">
         <div class="row">
             <div class="image-container">
@@ -56,10 +55,15 @@
 
                 <!-- Comment Modal Body -->
                 <div class="modal-body">
-                    <form action="#" method="POST" id="signup-form" class="form-horizontal">
+                    <form action="/images/<%= image._id %>/comments" method="POST" id="comment-form" class="form-horizontal">
+                        <div class="form-group">
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" name="author" placeholder="Name"></textarea>
+                            </div>
+                        </div>
                          <div class="form-group">
                             <div class="col-sm-10">
-                                <textarea rows="5" class="form-control" name="text" placeholder="Comment..."></textarea>
+                                <textarea rows="5" class="form-control" name="content" placeholder="Comment"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
