Implement client side comment form validation

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,6 +32,10 @@ hr {
     background: #ecf0f1;
 }
 
+.validation-error { 
+    border:  1px solid #a94442; 
+}
+
 /* Navbar */
 
 .navbar-inverse {
