Set up angular homepage with static data

--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,4 +1,4 @@
-<head ng-app="imageGalleryApp">
+<head>
 	<title>The Image Gallery - <%= title %></title>
     <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
