--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html>
-
-    <% include ../partials/head %>
+<html ng-app="imageGalleryApp">
+    
+<% include ../partials/head %>
     
 <body>
 	<% include ../partials/navbar %>
-
     <div class="container">
         <div class="jumbotron">
             <h1><i class="fa fa-camera-retro" aria-hidden="true"></i></span> <%= pageHeader.title %></h1>
@@ -13,40 +12,33 @@
             <p><a class="btn btn-primary btn-large" href="/image/new">Add a New Image To The Collection</a></p>
         </div>
 
-        <div class="row">
-            <% images.forEach(function(image) { %>
-                <% if (!image.unlisted) { %>
-                    <div class="col-md-4 col-sm-6 col-xs-12">
-                        <div class="thumbnail img-hover">
-                            <div class="image-wrap">
-                                <a href="/images/<%= image._id %>">
-                                    <img src="<%= image.url %>">
-                                    <div class="image-overlay">
-                                        <h3 class="overlay-content">
-                                            <i class="fa fa-comment" aria-hidden="true"></i> <%= image.comments.length %>
-                                            &nbsp;
-                                            <i class="fa fa-heart" aria-hidden="true"></i> <%= image.likes %>
-                                        </h3>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="image-details">
-                                <a href="/images/<%= image._id %>"><%= image.title %></a><%= image.description %>
-                            </div>
+        <div ng-controller="homepageController">
+
+            <div class="row">
+                <div class="col-md-4 col-sm-6 col-xs-12" ng-repeat="image in data.images | filter: textFilter">
+                    <div class="thumbnail img-hover">
+                        <div class="image-wrap">
+                            <a href="/images/{{ image._id }}">
+                                <img src="{{ image.url }}">
+                                <div class="image-overlay">
+                                    <h3 class="overlay-content">
+                                        <i class="fa fa-comment" aria-hidden="true"></i>{{ image.comments.length}} 
+                                        &nbsp;
+                                        <i class="fa fa-heart" aria-hidden="true"></i> {{ image.likes }}
+                                    </h3>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="image-details">
+                            <a href="/images/{{ image._id }}">{{ image.title }}</a>{{ image.description }}
                         </div>
                     </div>
-                <% } %> 
-            <% }); %>
+                </div>
+            </div>
         </div>
     </div>
     
     <% include ../partials/footer %>
-    
-    <% if (message) { %>
-        <script type="text/javascript">
-            alert(<%= message %>);
-        </script>
-    <% } %>
     <% include ../partials/scripts %>
 </body>
 </html>
