--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -14,28 +14,31 @@
 
         <div ng-controller="homepageController">
             <div class="row">
-                <div class="text-center">
+                <div class="image-filter text-center">
+                    <h3>{{ message }}</h3>
                     <label for="filter">Filter results: </label> &nbsp;
                     <input id="filter" type="text" name="filter" ng-model="textFilter">
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12" ng-repeat="image in data.images | filter: textFilter">
-                    <div class="thumbnail img-hover">
-                        <div class="image-wrap">
-                            <a href="/images/{{ image._id }}">
-                                <img src="{{ image.url }}">
-                                <div class="image-overlay">
-                                    <h3 class="overlay-content">
-                                        <i class="fa fa-comment" aria-hidden="true"></i>{{ image.comments.length}} 
-                                        &nbsp;
-                                        <i class="fa fa-heart" aria-hidden="true"></i> {{ image.likes }}
-                                    </h3>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="image-details">
-                            <a href="/images/{{ image._id }}">{{ image.title }}</a>{{ image.description }}
+                    <div image-hover class="image-hover">
+                        <div class="thumbnail">
+                            <div class="image-wrap">
+                                <a href="/images/{{ image._id }}">
+                                    <img src="{{ image.url }}">
+                                    <div class="image-overlay">
+                                        <h3 class="overlay-content">
+                                            <i class="fa fa-comment" aria-hidden="true"></i>{{ image.comments.length}} 
+                                            &nbsp;
+                                            <i class="fa fa-heart" aria-hidden="true"></i> {{ image.likes }}
+                                        </h3>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="image-details">
+                                <a href="/images/{{ image._id }}">{{ image.title }}</a>{{ image.description }}
+                            </div>
                         </div>
                     </div>
                 </div>
